@@ -8,8 +8,3 @@ libclutter_box2d_@CLUTTER_BOX2D_MAJORMINOR@_la_SOURCES = clutter-box2d.cpp
 
 clutter_box2dheaders_HEADERS = clutter-box2d.h
 clutter_box2dheadersdir = $(includedir)/clutter-0.6/clutter-box2d
-
-EXTRA_DIST = clutter-box2d.pc.in
-
-CLEANFILES = clutter-box2d-0.6.pc
-DISTCLEANFILES = clutter-box2d.pc
