@@ -3,8 +3,11 @@ noinst_PROGRAMS = blockbox
 INCLUDES = -I$(top_srcdir)/clutter-box2d @GCC_FLAGS@ @DEPS_CFLAGS@
 AM_LDFLAGS = @DEPS_LIBS@ $(top_builddir)/clutter-box2d/libclutter-box2d-@CLUTTER_BOX2D_MAJORMINOR@.la 
 
+EXTRA_DIST=redhand.png
+
 blockbox_SOURCES = \
 	blockbox.c		\
+	blockbox.h		\
 	actor-manipulator.c	\
 	actor-manipulator.h	\
 	popup.c			\
