@@ -1,5 +1,12 @@
 2008-04-11  Øyvind Kolås  <pippin@o-hand.com>
 
+	* box2d/Makefile.am:
+	* clutter-box2d/Makefile.am:
+	* examples/Makefile.am: add more files to distribution making
+	clutter-box2d pass distcheck.
+
+2008-04-11  Øyvind Kolås  <pippin@o-hand.com>
+
 	* examples/blockbox.c: (init_scenes), (keep_on_top),
 	(add_controls), (main): make controls stay on top through a timeout, 
 	* examples/util.c: (add_cage): even when a stage cage without roof is
